--- a/spyneAssignment/Controller/CaptureList/View/Cell/ImageTableViewCell.xib
+++ b/spyneAssignment/Controller/CaptureList/View/Cell/ImageTableViewCell.xib
@@ -22,16 +22,22 @@
                         <rect key="frame" x="10" y="5" width="272.33333333333331" height="143"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iYV-uQ-L6h">
-                        <rect key="frame" x="394" y="32.666666666666657" width="50" height="88"/>
+                        <rect key="frame" x="287.33333333333331" y="28.666666666666671" width="156.66666666666669" height="96"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDG-j4-089">
+                                <rect key="frame" x="0.0" y="0.0" width="156.66666666666666" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0XT-5O-v9K">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="8" width="156.66666666666666" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vgh-a5-gHr">
-                                <rect key="frame" x="0.0" y="58" width="50" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vgh-a5-gHr">
+                                <rect key="frame" x="0.0" y="66" width="156.66666666666666" height="30"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal">
                                     <color key="titleColor" systemColor="systemBlueColor"/>
@@ -48,6 +54,7 @@
                     <constraint firstItem="ik5-2W-dQE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="00E-lA-mVS"/>
                     <constraint firstAttribute="bottom" secondItem="ik5-2W-dQE" secondAttribute="bottom" constant="5" id="GCo-YE-edr"/>
                     <constraint firstItem="ik5-2W-dQE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="IRu-6e-kfD"/>
+                    <constraint firstItem="iYV-uQ-L6h" firstAttribute="leading" secondItem="ik5-2W-dQE" secondAttribute="trailing" constant="5" id="LbF-qs-NV6"/>
                     <constraint firstItem="iYV-uQ-L6h" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bCs-cu-C3e"/>
                     <constraint firstAttribute="trailing" secondItem="iYV-uQ-L6h" secondAttribute="trailing" constant="10" id="tCB-dr-A1F"/>
                     <constraint firstItem="ik5-2W-dQE" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.6" id="vid-Pv-kmc"/>
@@ -57,6 +64,7 @@
             <connections>
                 <outlet property="btnStatus" destination="Vgh-a5-gHr" id="kbm-Zb-dUz"/>
                 <outlet property="imageCapture" destination="ik5-2W-dQE" id="4B0-nA-XZR"/>
+                <outlet property="lblImageName" destination="kDG-j4-089" id="8L9-r0-ScB"/>
                 <outlet property="lblProgess" destination="0XT-5O-v9K" id="IR1-mA-fYb"/>
             </connections>
             <point key="canvasLocation" x="241.22137404580153" y="36.971830985915496"/>
