--- a/spyneAssignment/Controller/CaptureList/View/Cell/ImageTableViewCell.xib
+++ b/spyneAssignment/Controller/CaptureList/View/Cell/ImageTableViewCell.xib
@@ -22,7 +22,7 @@
                         <rect key="frame" x="10" y="5" width="272.33333333333331" height="143"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iYV-uQ-L6h">
-                        <rect key="frame" x="287.33333333333331" y="28.666666666666671" width="156.66666666666669" height="96"/>
+                        <rect key="frame" x="287.33333333333331" y="29" width="156.66666666666669" height="95"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDG-j4-089">
                                 <rect key="frame" x="0.0" y="0.0" width="156.66666666666666" height="0.0"/>
@@ -32,12 +32,13 @@
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0XT-5O-v9K">
                                 <rect key="frame" x="0.0" y="8" width="156.66666666666666" height="50"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vgh-a5-gHr">
-                                <rect key="frame" x="0.0" y="66" width="156.66666666666666" height="30"/>
+                                <rect key="frame" x="0.0" y="66" width="156.66666666666666" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal">
                                     <color key="titleColor" systemColor="systemBlueColor"/>
