--- a/spyneAssignment/Controller/CaptureList/View/Cell/ImageTableViewCell.xib
+++ b/spyneAssignment/Controller/CaptureList/View/Cell/ImageTableViewCell.xib
@@ -22,7 +22,7 @@
                         <rect key="frame" x="10" y="5" width="272.33333333333331" height="143"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iYV-uQ-L6h">
-                        <rect key="frame" x="287.33333333333331" y="29" width="156.66666666666669" height="95"/>
+                        <rect key="frame" x="287.33333333333331" y="28.666666666666671" width="156.66666666666669" height="96"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDG-j4-089">
                                 <rect key="frame" x="0.0" y="0.0" width="156.66666666666666" height="0.0"/>
@@ -36,17 +36,32 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vgh-a5-gHr">
-                                <rect key="frame" x="0.0" y="66" width="156.66666666666666" height="29"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal">
-                                    <color key="titleColor" systemColor="systemBlueColor"/>
-                                </state>
-                                <connections>
-                                    <action selector="didTapStatus:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Otl-hY-vrf"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yTE-ju-ibe">
+                                <rect key="frame" x="0.0" y="66" width="156.66666666666666" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ham-nX-mvc">
+                                        <rect key="frame" x="0.0" y="0.0" width="126.66666666666667" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BHg-kU-hZc">
+                                        <rect key="frame" x="126.66666666666669" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="fHa-2F-wW6"/>
+                                            <constraint firstAttribute="width" constant="30" id="sZW-bh-1EQ"/>
+                                        </constraints>
+                                        <color key="tintColor" systemColor="systemBlueColor"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="square.and.arrow.up.circle.fill" catalog="system">
+                                            <color key="titleColor" systemColor="systemBlueColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didTapStatus:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="e2E-Ft-LQN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </stackView>
                 </subviews>
@@ -63,15 +78,18 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="btnStatus" destination="Vgh-a5-gHr" id="kbm-Zb-dUz"/>
+                <outlet property="btnUpload" destination="BHg-kU-hZc" id="t1f-Yb-mMY"/>
+                <outlet property="editingAccessoryView" destination="BHg-kU-hZc" id="hue-YZ-CIv"/>
                 <outlet property="imageCapture" destination="ik5-2W-dQE" id="4B0-nA-XZR"/>
                 <outlet property="lblImageName" destination="kDG-j4-089" id="8L9-r0-ScB"/>
                 <outlet property="lblProgess" destination="0XT-5O-v9K" id="IR1-mA-fYb"/>
+                <outlet property="lblStatus" destination="Ham-nX-mvc" id="1Ja-jq-HJC"/>
             </connections>
             <point key="canvasLocation" x="241.22137404580153" y="36.971830985915496"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="square.and.arrow.up.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
